# discord-openrouter

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile.test  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.claude/: CLAUDE.md
.githooks/: pre-commit
.github/workflows/: main.yml
docs/superpowers/plans/: 2026-04-11-multi-modality-model-switching.md
docs/superpowers/specs/: 2026-04-11-multi-modality-model-switching-design.md
src/: bot.py
src/discord_openrouter/: __init__.py  bot.py  util.py
src/discord_openrouter/cogs/openrouter/: __init__.py  attachments.py  chat.py  client.py  cog.py  command_options.py  embed_delivery.py  embeds.py  image.py  models.py  speech.py  state.py  tool_registry.py  video.py  views.py
src/discord_openrouter/config/: __init__.py  auth.py
tests/: conftest.py  test_attachments.py  test_button_view.py  test_chat.py  test_choice_caps.py  test_config_auth.py  test_embed_delivery.py  test_embeds.py  test_image.py  test_logging_setup.py  test_openrouter_client.py  test_openrouter_cog.py  test_openrouter_state.py  test_speech.py  test_util.py  test_video.py
