[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-openrouter"
version = "1.4.0"
description = "Discord bot for OpenRouter chat with dynamic model switching"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "John Magnus-Sharpe" },
]
dependencies = [
  "httpx~=0.28",
  "openrouter~=0.9.1",
  "py-cord~=2.8",
  "python-dotenv~=1.2",
]

[project.optional-dependencies]
dev = [
  "pytest~=9.0",
  "pytest-asyncio~=1.4",
  "ruff~=0.15",
  "pyright~=1.1",
]

[project.urls]
Repository = "https://github.com/jdmsharpe/discord-openrouter"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "ASYNC", "PERF", "PTH", "RET", "RUF"]
ignore = [
  "E501",    # line too long (formatter handles this)
  "RUF001",  # ambiguous-unicode-character-string (typographic chars are intentional)
  "RUF002",  # ambiguous-unicode-character-docstring (same)
]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["src"]
exclude = [".venv", "**/node_modules", "**/__pycache__", "**/.*"]
extraPaths = ["src"]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["discord_openrouter*"]
